tests/ui/rfc-2632-const-trait-impl/call-generic-in-impl.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-in-impl.rs:9:16
   |
LL | impl<T: ~const PartialEq> const MyPartialEq for T {
   |                ^^^^^^^^^

error: aborting due to previous error

